<resources>
    <string name="socketTimeoutException">Connection Timeout.</string>
    <string name="networkError">Please check your internet connection.</string>
    <string name="unknownError">There was an error. Please try later.</string>
    <string name="or_separator">|</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="user_role">User Role</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember email</string>
    <string name="forgot_username_or_password">Forgot username or password?</string>
    <string name="register">Sign Up</string>
    <string name="your_best_self_reimagined">Your Best-Self\nReimagined</string>
    <string name="need_help_support">Support</string>
    <string name="powered_by">Powered by</string>
    <string name="auth_code">Auth code</string>
    <string name="enter_six_digit_mfa">Enter the six digit code from your authenticator app to complete login</string>
    <string name="username_error">Enter email</string>
    <string name="login_failed_title">Login Failed</string>
    <string name="login_failed_message">Your email or password is incorrect. Please try again.</string>
    <string name="registration">Registration</string>
    <string name="registration_info">To register you will need to visit one of our clinics. To find out more follow the link below or book a consultation.</string>
    <string name="book_consultation">Book Consultation</string>
    <string name="find_out_more">Find out more</string>
    <string name="uh_oh">Uh Oh!</string>
    <string name="your_account_is_not_active">Your Account Is Not Active.</string>
    <string name="account_not_active_info">Please click the link below for more information or book a consultation to register with us.</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="about_us">About Us</string>
    <string name="forgot_username_q">Forgot Username?</string>
    <string name="send_reset_code">Send Reset Code</string>
    <string name="enter_registered_email">Enter Registered Email Address</string>
    <string name="incorrect_reset_email">Incorrect Email</string>
    <string name="email_doesnt_match">The email you entered doesn\'t match your account</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="recovery_info">We have sent password recovery instructions to your registered email.</string>
    <string name="open_email_app">Open Email App</string>
    <string name="enter_code_forgot_password">Enter the six digit code from your email to reset password.</string>
    <string name="resend_code">Resend Code</string>
    <string name="password_must">Password must :</string>
    <string name="condition1">\u2022 be at least 8 characters</string>
    <string name="condition2">\u2022 contain both lower and upper case letter</string>
    <string name="condition3">\u2022 contain at least 1 number</string>
    <string name="condition4">\u2022 contain at least 1 special symbol</string>
    <string name="skip_i_ll_confirm_later">Skip, I\'ll confirm later</string>
    <string name="did_not_receive_the_email">Did not receive the email?</string>
    <string name="check_your_spam_folder_or_contact_us">Check your spam folder, or contact us.</string>
    <string name="password_has_been_changed">Password has been changed</string>
    <string name="loading">Loading...</string>
    <string name="email_does_not_match">The email you entered doesn\'t match your account</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="password_error">Your password must be at least 8 characters.</string>
    <string name="your_password_has_been_reset">Your Password\nHas Been Reset</string>
    <string name="reset_password_info">To login with your new\npassword click here.</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="forgot_password_q">Forgot password?</string>
    <string name="send_link">Send Link</string>
    <string name="registered_email_address">Registered email address</string>
    <string name="sent">Sent</string>
    <string name="sent_username_info">We have sent your username to your registered email address.</string>
    <string name="to_login_click_here">To login click here</string>
    <string name="home">Home</string>
    <string name="device">Device</string>
    <string name="history">History</string>
    <string name="more">More</string>
    <string name="schedule">Schedule</string>
    <string name="faq">FAQ</string>
    <string name="support">Support</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="clients_list">Clients List</string>
    <string name="welcome">Welcome</string>
    <string name="pair_device">Pair your device</string>
    <string name="pair_device_title">Pair device</string>
    <string name="visit_sonal_website">Please visit SONAL product website to manage your account</string>
    <string name="protocol_not_active">Your Protocol is processing. We will notify you via email once it ready</string>
    <string name="info_updated">Info updated</string>
    <string name="info_updated_description">%1$s\'s info details updated successfully</string>
    <string name="btn_next">Next</string>
    <string name="locate_device_info">Firmly press the center button to begin the pairing process.</string>
    <string name="session_start_info">Press the\ncenter button on base station\n for 2 seconds\nto begin your session</string>
    <string name="session_start_device_info">Press Start on your device to begin your session</string>
    <string name="pairing_successful">Pairing Successful!</string>
    <string name="pairing_successful_description">Your device is successfully connected, proceed to your session.</string>
    <string name="proceed_to_session">Proceed to Session</string>
    <string name="make_sure_device_ready">Make sure your device has a full battery before starting your session\n\nPower on the device by flipping the switch on the bottom of the base station from RED to GREEN</string>
    <string name="account">Account</string>
    <string name="profile_information">Profile Information</string>
    <string name="organization">Organization</string>
    <string name="organizations">Organizations</string>
    <string name="chief_complaint">Chief Complaint</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="device_history">Device History</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="submit_new_password">Submit New Password</string>
    <string name="set_new_password">Set New Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="submit">Submit</string>
    <string name="start_session">Start Session</string>
    <string name="ensure_your_device_powered_up">Turn on Device</string>
    <string name="how_to_power_on_the_device">How to power on the device</string>
    <string name="scanning">Searching...</string>
    <string name="skip_onboarding">Skip onboarding</string>
    <string name="bluetooth_symbol">You should see the Bluetooth symbol flashing.</string>
    <string name="activate_your_device">Activate\nYour Device</string>
    <string name="pause_session_info">To pause your session\npress the center button on\nbase station for 2 seconds.</string>
    <string name="resume_session_info">To resume your session\npress the center button on\nbase station for 2 seconds.</string>
    <string name="cancel_session_info">To cancel your session\npress the center button on\nbase station for 5 seconds</string>
    <string name="session_length">Session Length</string>
    <string name="device_initializing">Device Initializing</string>
    <string name="please_wait">Please Wait...</string>
    <string name="stop_session_on_headset">Stop session on headset</string>
    <string name="press_center_button">Firmly press the center button on the base station to begin your session</string>
    <string name="session_done">Your session is done for today, check back in tomorrow.</string>
    <string name="paused">paused</string>
    <string name="retry">Retry</string>
    <string name="error_sending_report">Error sending report</string>
    <string name="congratulations">Congratulations!</string>
    <string name="preparing_session">Preparing your session</string>
    <string name="error_battery_low">Battery level is low. We recommend you to plug your Sonal device to power, as the session can be terminated.</string>
    <string name="error_battery_critical">The battery level is critical. Please, connect Sonal device to power otherwise the session will be terminated before completing.</string>
    <string name="session_history">Session History</string>
    <string name="eeg_rd">EEG R/D:</string>
    <string name="sd">S/D:</string>
    <string name="completed">Completed</string>
    <string name="terminated">Terminated</string>
    <string name="got_it">Got it</string>
    <string name="list_of_precautions">List of all precautions</string>
    <string name="how_to_step1">Power on the device by flipping the switch on the bottom of the base station from RED to GREEN</string>
    <string name="how_to_step2">Firmly press the center button to begin the pairing process.</string>
    <string name="how_to_step3">You should see the Bluetooth symbol flashing.</string>
    <string name="how_to_step4">When all the indicators are lit, the device is successfully connected. You can now begin your session. </string>
    <string name="how_to_step5">Choose a client above to start a session.</string>
    <string name="how_to_step6">This device uses strong magnets.    Avoid wearing metal items on or near your head. Ensure you are aware of all precautions before proceeding.</string>
    <string name="precautions_title">The Sonal should NOT be used by individuals who have:</string>
    <string name="metal_objects_title">Metal objects such as:</string>
    <string name="precautions_list">\u2022 cardiac pacemakers \n\u2022 implanted medication pumps \n\u2022 defribrilators \n\u2022 intra cardiac lines \n\u2022 aneurysm clips \n\u2022 shunts \n\u2022 stimulators \n\u2022 cochlear implants \n\u2022 stents \n\u2022 electrodes \n\u2022 metallic objects in or on their head</string>
    <string name="metal_objects_list">\u2022 shrapnel \n\u2022 bullets or bullet fragments \n\u2022 magnetically activated dental implants</string>
    <string name="precautions_warning">Failure to follow this restriction could result in serious injury or death.</string>
    <string name="session_complete">Session Complete</string>
    <string name="go_home">Go Home</string>
    <string name="see_you_tomorrow">See you tomorrow</string>
    <string name="connected">Connected</string>
    <string name="your_device">Your Device</string>
    <string name="available_devices">Available Devices</string>
</resources>