<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_gray"
        android:orderInCategory="0"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_navigation_device"
        android:enabled="true"
        android:icon="@drawable/ic_bluetooth_gray"
        android:orderInCategory="1"
        android:title="@string/device" />
    <item
        android:id="@+id/bottom_navigation_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:orderInCategory="2"
        android:visible="false"
        android:title="@string/history" />
    <item
        android:id="@+id/bottom_navigation_more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:orderInCategory="3"
        android:title="@string/more" />
</menu>