<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_overlaid"
    android:paddingHorizontal="@dimen/padding_24dp"
    android:paddingVertical="0dp"
    tools:context=".ui.user.login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/BaseEditText.Outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:endIconDrawable="@drawable/password_eye"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tip_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"
            tools:text="Test@1234" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset_password"
        style="@style/RoundedButton.AquaBlack.Text"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="0dp" />

    <ImageView
        android:id="@+id/iv_logo_sonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_56dp"
        android:src="@drawable/img_sonal_moto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_powered_by"
        style="@style/BaseText.Caption.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:layout_marginTop="@dimen/margin_30dp"
        android:text="@string/powered_by"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_sonal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_powered_by"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/ll_bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_log_in"
            style="@style/BaseText.Caption.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_condition1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/condition1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_condition2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_condition2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/condition2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_condition3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_condition3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/condition3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_condition4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_condition4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/condition4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_password_must"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/password_must"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_condition1"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>