<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_overlaid"
    android:paddingHorizontal="@dimen/padding_24dp"
    android:paddingVertical="0dp"
    tools:context=".ui.user.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo_sonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_56dp"
        android:src="@drawable/img_sonal_moto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_powered_by"
        style="@style/BaseText.Caption.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:layout_marginTop="@dimen/margin_30dp"
        android:text="@string/powered_by"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_sonal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_powered_by"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_login_message"
        style="@style/BaseText.Heading.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:visibility="gone"
        android:gravity="center|start"
        android:paddingHorizontal="@dimen/padding_8dp"
        android:text="@string/your_best_self_reimagined"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_username"
        style="@style/BaseEditText.Outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_12dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tip_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"

            tools:text="tapp43956" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/BaseEditText.Outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/password_eye"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/chk_remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tip_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"
            tools:text="Test@1234" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_recover_here"
        style="@style/BaseText.Caption.Yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="@+id/chk_remember_me"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="@+id/chk_remember_me" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chk_remember_me"
        style="@style/CheckBox"
        android:layout_marginBottom="16dp"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_login"
        style="@style/RoundedButton.AquaBlack.Text"
        android:layout_marginBottom="32dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>