<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_overlaid"
    android:paddingHorizontal="@dimen/padding_24dp"
    android:paddingVertical="0dp"
    tools:context=".ui.user.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo_sonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_56dp"
        android:src="@drawable/img_sonal_moto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_powered_by"
        style="@style/BaseText.Caption.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:layout_marginTop="@dimen/margin_30dp"
        android:text="@string/powered_by"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_sonal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_powered_by"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label_reset_password"
        style="@style/BaseText.Heading.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:textSize="@dimen/text_size_large_32"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_username"
        style="@style/BaseEditText.Outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_reset_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tip_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_registered_email"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_log_in"
            style="@style/BaseText.Caption.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_reset_link"
        style="@style/RoundedButton.Aqua.BlackText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:text="@string/send_reset_code"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>